@@ -3,6 +3,8 @@ All notable changes to this project will be documented in this file.
 
 
 ## [Unreleased]
+### Added
+- distributions: Mixture
 
 ## [0.3] - 2021-10-25
 ### Added 
